dnl This is the newlib/libc/sys configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([tomos])

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../..)

NEWLIB_CONFIGURE(../..)

dnl We have to enable libtool after NEWLIB_CONFIGURE because if we try and
dnl add it into NEWLIB_CONFIGURE, executable tests are made before the first
dnl line of the macro which fail because appropriate LDFLAGS are not set.
_LT_DECL_SED
_LT_PROG_ECHO_BACKSLASH
if test "${use_libtool}" = "yes"; then
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
fi

if test -n "${sys_dir}"; then
  case ${sys_dir} in
dnl	a29khif) AC_CONFIG_SUBDIRS(a29khif) ;;
dnl		arc) AC_CONFIG_SUBDIRS(arc) ;;
dnl		arm) AC_CONFIG_SUBDIRS(arm) ;;
dnl		d10v) AC_CONFIG_SUBDIRS(d10v) ;;
dnl		decstation) AC_CONFIG_SUBDIRS(decstation) ;;
dnl		epiphany) AC_CONFIG_SUBDIRS(epiphany) ;;
dnl		h8300hms) AC_CONFIG_SUBDIRS(h8300hms) ;;
dnl		h8500hms) AC_CONFIG_SUBDIRS(h8500hms) ;;
dnl		linux) AC_CONFIG_SUBDIRS(linux) ;;
dnl		m88kbug) AC_CONFIG_SUBDIRS(m88kbug) ;;
dnl		mmixware) AC_CONFIG_SUBDIRS(mmixware) ;;
dnl		netware) AC_CONFIG_SUBDIRS(netware) ;;
dnl		rdos) AC_CONFIG_SUBDIRS(rdos) ;;
dnl		rtems) AC_CONFIG_SUBDIRS(rtems) ;;
dnl		sh) AC_CONFIG_SUBDIRS(sh) ;;
dnl		sparc64) AC_CONFIG_SUBDIRS(sparc64) ;;
dnl		sun4) AC_CONFIG_SUBDIRS(sun4) ;;
dnl		sysmec) AC_CONFIG_SUBDIRS(sysmec) ;;
dnl		sysnec810) AC_CONFIG_SUBDIRS(sysnec810) ;;
dnl		sysnecv850) AC_CONFIG_SUBDIRS(sysnecv850) ;;
dnl		sysvi386) AC_CONFIG_SUBDIRS(sysvi386) ;;
dnl		sysvnecv70) AC_CONFIG_SUBDIRS(sysvnecv70) ;;
dnl		tic80) AC_CONFIG_SUBDIRS(tic80) ;;
	tomos) AC_CONFIG_SUBDIRS(tomos) ;;
dnl		w65) AC_CONFIG_SUBDIRS(w65) ;;
dnl		z8ksim) AC_CONFIG_SUBDIRS(z8ksim) ;;
  esac;
fi

CRT0=
if test "x${have_crt0}" = "xyes"; then
  CRT0=crt0.o
fi
AC_SUBST(CRT0)

AM_CONDITIONAL(HAVE_SYS_DIR, test x${sys_dir} != x)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
